--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ clickhouse-connect==0.9.2
 clickhouse-driver==0.2.9
 clickhouse-sqlalchemy==0.3.2
 marshmallow-sqlalchemy==1.4.2
-
+SQLAlchemy<2.0
+Werkzeug<2.3
+gunicorn
