--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 apache-superset==5.0.0
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
+
+clickhouse-connect==0.7.1
+sqlalchemy-clickhouse==0.3.0
