--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 apache-superset==5.0.0
+clickhouse-connect==0.9.2
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
-
-clickhouse-connect==0.7.1
-sqlalchemy-clickhouse==0.3.0
+python-geohash==1.0.4
