--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 apache-superset==5.0.0
-clickhouse-connect==0.9.2
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
-python-geohash==0.8.5
+clickhouse-connect==0.6.8
+clickhouse-sqlalchemy==0.3.0
+pillow==10.0.0
