--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 apache-superset==5.0.0
-clickhouse-connect==0.7.9
-marshmallow==3.20.1
+clickhouse-connect==0.7.5
+clickhouse-sqlalchemy==0.3.0
+marshmallow==3.21.1
+marshmallow-sqlalchemy==0.29.0
 pillow==10.0.0
