--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 apache-superset==5.0.0
-clickhouse-connect==0.7.5
-clickhouse-sqlalchemy==0.3.0
-pillow==10.0.0
+clickhouse-connect
+clickhouse-sqlalchemy
+pillow
